
5.2a3 -> 5.2a4:
    - jbj: python: wire-up %{python:...}. the string result is bogus, todo++.
    - jbj: python: add --with-pythonembed for embedding python.
    - jbj: perl: wire-up %post -p <perl>. arg1/arg2, persistent interp, todo++.
    - jbj: perl: wire-up %{perl:...} with a string result.
    - jbj: perl: add --with-perlembed for embedding perl.
    - jbj: tcl: wire-up %post -p <tcl>. arg1/arg2, persistent interp, todo++.
    - jbj: tcl: wire-up %{tcl:...} with a string result.
    - jbj: tcl: add --with-tcl for embedding tcl.
    - jbj: lua: hack up --eval /path/to/file.lua to run scripts from a file.
    - jbj: mire: teardown for platpat on exit needs to be done in order.
    - jbj: rpmwget: move to tools.
    - jbj: wire-up RPMTAG_FILEDIGESTALGO. wotta waste to pretend "compatible" ...
    - jbj: yaml: add build scriptlet tags for --yaml/--xml display.
    - jbj: yaml: permit --without-syck, add some mac os x AutoFu/gcc fiddle-ups.
    - jbj: yaml: add lsyck lua module to parse YAML.
    - jbj: yaml: mix syck into the misc melange ...
    - jbj: misc: get rid of splitFoo prototypes, bury the last use in rpmfi.c.
    - jbj: PCRE in -lrpmmisc, LUA in -lrpmio linking -lrpmmisc, instead.
    - jbj: fix: --noscripts/--nofdigests/--nocontexts need to use popt callback.
    - jbj: rpmiob: fix: return iob to _rpmiobPool instead.
    - jbj: yarn: convert mire to usage mutex with refcounts
	(unifying array <-> element mutexes by copying use/pool
	pointers throughout the array).
    - jbj: rpmku: rework rpmiob handling to avoid extra malloc's.
    - jbj: rpmiob: fix: add a newref in rpmiobNew.
    - jbj: yarn: convert rpmiob to usage mutex with refcounts.
    - rse: add RPM Lua function rpm.hostname()
    - jbj: fix: handle ./../foo paths correctly (#491388).
    - jbj: rpmlib: rescusitate splint annotations.
    - jbj: rpmdb: rescusitate splint annotations.
    - jbj: rpmtsOrder: fully enable parentdir deps when ordering.